--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -2559,7 +2559,7 @@ body.has-loading-screen.loading-done #brand-navigation {
     align-items: center;
     background-color: #000;
     display: flex;
-    padding: .5rem .75rem;
+  /*  padding: .5rem .75rem;  */
     left: -1rem;
     position: relative;
 }
